--- a/style.css
+++ b/style.css
@@ -45,15 +45,16 @@ form#ic-form {
   margin: 16px;
   display: grid;
   column-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-areas:
     "label1 label1 label1 label1"
     "input1 input1 input1 input1"
     "label2 label2 label2 label2"
     "input2 input2 input2 input2"
     "label3 label3 label3 label3"
-    "input3 input3 select1 select1"
+    "input3 input3 input3 select1"
     "label4 label4 label4 label4"
-    "input4 input4 select2 select2"
+    "input4 input4 input4 select2"
     "button button button button";
 }
 
