--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@
   --white: #ffffff;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: var(--charcoal);
+    --text: var(--cream);
+    --primary: var(--flame);
+    --accent: var(--flame);
+
+    --black: #000000;
+    --white: #ffffff;
+  }
+}
+
 html,
 body {
   margin: 0;
@@ -117,6 +129,8 @@ form#ic-form select {
   border-radius: 5px;
   font-size: 18px;
   outline: none;
+  background-color: var(--background);
+  color: var(--text);
 }
 
 form#ic-form input:focus,
