--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root {
+body {
   --cream: #f4ebd0;
   --charcoal: #122620;
   --lapis-lazuli: #255c99ff;
@@ -15,7 +15,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
+  body {
     --background: var(--charcoal);
     --text: var(--cream);
     --primary: var(--flame);
@@ -24,6 +24,41 @@
     --black: #000000;
     --white: #ffffff;
   }
+}
+
+body.light-mode {
+  --background: var(--cream);
+  --text: var(--charcoal);
+  --primary: var(--lapis-lazuli);
+  --accent: var(--flame);
+
+  --black: #000000;
+  --white: #ffffff;
+}
+
+body.dark-mode {
+  --background: var(--charcoal);
+  --text: var(--cream);
+  --primary: var(--flame);
+  --accent: var(--flame);
+
+  --black: #000000;
+  --white: #ffffff;
+}
+
+::backdrop {
+  background-image: linear-gradient(
+    45deg,
+    magenta,
+    rebeccapurple,
+    dodgerblue,
+    green
+  );
+  opacity: 0.75;
+}
+
+button#settings-button {
+  margin: 0 16px 16px 16px;
 }
 
 html,
